lib/tests/fixtures/compiler/parser/break_in_node.baseline
Error: break_in_node.pp:3:9: break statement cannot be used inside a node statement.
  break
  ^~~~~
