lib/tests/fixtures/compiler/parser/break_in_node.pp
node foo {
    if true {
        break
    }
}
